# time-tracker-cli

./: LICENSE  comands.md  pyproject.toml
src/timetracker/cli/: dashboard.py  main.py  tasks.py  test.py  test_db.py
src/timetracker/core/: database.py
